Splash panel spacing fix

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,7 +6,7 @@
 	width: 100%;
 	height: 100%;
 	position: relative;
-	margin-top: -200px;
+	margin-top: -240px;
 	background-size: cover;
 	min-height: 600px;
 	max-height: 800px;
